feat(AuthHero): auth and return auth hero
