# src/controller/HeroController.ts
@@ -1,11 +1,15 @@
-import { Controller, Get, Path, Route } from 'tsoa';
-import { Hero } from '../interface/Hero';
+import { Request as ExRequest } from 'express';
+import { Controller, Get, Path, Route, Request } from 'tsoa';
+import { Hero, AuthHero } from '../interface/Hero';
 import { HeroService } from '../service/HeroService';
-
-@Route('heroes')
+@Route('heros')
 export class HeroController extends Controller {
   @Get('{heroId}')
-  public async getHero(@Path() heroId: number): Promise<Hero> {
+  public async getHero(@Path() heroId: number, @Request() req: ExRequest): Promise<Hero | AuthHero> {
+    if (req.headers.name && req.headers.password) {
+      const { name, password } = req.headers;
+      return new HeroService().getAuthHero(String(name), String(password), heroId);
+    }
     return new HeroService().get(heroId);
   }
 
